Refactor to simplify folder structure

--- a/properties/config.json
+++ b/properties/config.json
@@ -1,19 +1,19 @@
 {
-"DomainName":"Domain_46",
+"DomainName":"Domain_77",
 "Host":"inbqm28s03",
-"Port":"9594",
+"Port":"9874",
 "UserName":"Administrator",
 "Password":"Administrator",
 "SecurityDomain":"Native",
 "INFACMD_PATH":"C:\\Informatica\\10.2.0\\clients\\DeveloperClient\\infacmd\\",
 "Version":"10.2.0",
-"Build":"46",
-"RepositoryService":"MRS_46",
+"Build":"77",
+"RepositoryService":"MRS_77",
 "DatabaseType":"ORACLE",
-"cli_project_home_path":"D:\\Projects\\dq-cli\\",
+"cli_project_home_path":"C:\\Projects\\dq-cli\\",
 "ModuleName":"DQT",
 "BranchName":"ML",
-"BuildDate":"16-August-2011",
+"BuildDate":"16-January-2017",
 "email_to":"rajesh@informatica.com",
 "email_cc":"rajesh@informatica.com",
 "email_bcc":"rajesh@informatica.com",
