--- a/properties/config.json
+++ b/properties/config.json
@@ -17,6 +17,9 @@
 "email_to":"rajesh@informatica.com",
 "email_cc":"rajesh@informatica.com",
 "email_bcc":"rajesh@informatica.com",
+"email_from": "no-reply@informatica.com",
+"emailHost": "smtp3.informatica.com",
 "ExecutionTimeout" : 1800000,
-"qatrackurl" : "http://psrlxpamqa1:8080/qatrack/servlet/ImportXMLServlet"
+"qatrackurl" : "http://psrlxpamqa1:8080/qatrack/servlet/ImportXMLServlet",
+"qaHomeUrl" : "http://psrlxpamqa1:8080"
 }
