Modified dq_cli.js to accept skip in any case : Added new templates that has different mechanisms to validate results

--- a/properties/config.json
+++ b/properties/config.json
@@ -1,16 +1,16 @@
 {
-"DomainName":"Domain_77",
-"Host":"inbqm28s03",
-"Port":"9874",
+"DomainName":"Domain_89",
+"Host":"indqperf",
+"Port":"9587",
 "UserName":"Administrator",
 "Password":"Administrator",
 "SecurityDomain":"Native",
 "INFACMD_PATH":"C:\\Informatica\\10.2.0\\clients\\DeveloperClient\\infacmd\\",
 "Version":"10.2.0",
-"Build":"77",
-"RepositoryService":"MRS_77",
+"Build":"89",
+"RepositoryService":"MRS_89",
 "DatabaseType":"ORACLE",
-"cli_project_home_path":"C:\\Projects\\sendEmail\\",
+"cli_project_home_path":"C:\\Projects\\dqcli_v1\\",
 "ModuleName":"DQT",
 "BranchName":"ML",
 "BuildDate":"16-January-2017",
