--- a/properties/config.json
+++ b/properties/config.json
@@ -21,5 +21,6 @@
 "emailHost": "smtp3.informatica.com",
 "ExecutionTimeout" : 1800000,
 "qatrackurl" : "http://psrlxpamqa1:8080/qatrack/servlet/ImportXMLServlet",
-"qaHomeUrl" : "http://psrlxpamqa1:8080"
+"qaHomeUrl" : "http://psrlxpamqa1:8080",
+"sendEmail" : true
 }
